# Routes/Routes.go
@@ -1,20 +1,0 @@
-package Routes
-
-import (
-	"github.com/cui-bo/keypass/Controllers"
-	"github.com/gin-gonic/gin"
-)
-
-
-func SetupRouter() *gin.Engine {
-	r := gin.Default()
-	grp1 := r.Group("/user-api")
-	{
-		grp1.GET("users", Controllers.GetUsers)
-		grp1.POST("user", Controllers.CreateUser)
-		grp1.GET("user/:id", Controllers.GetUserById)
-		grp1.PUT("user/:id", Controllers.UpdateUser)
-		grp1.DELETE("user/:id", Controllers.DeleteUser)
-	}
-	return r
-}
